--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
       href="./assets/images/favicon-32x32.png"
     />
 
+    <!-- CSS -->
+    <link rel="stylesheet" href="style.css" />
+
+    <!-- Javascript -->
+    <script src="./app.js" defer></script>
+
     <title>Multi-step form | Frontend Mentor</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -30,28 +36,28 @@
       <!-- Sidebar start -->
 
       <aside class="card">
-        <div class="card1 active__form-page" id="card1">
-          <span>1</span>
+        <div class="card-step active__form-page" id="card1">
+          <span role="active">1</span>
           <div class="card__heading">
             <span>Step 1</span>
             <h4>Your info</h4>
           </div>
         </div>
-        <div class="card2" id="card2">
+        <div class="card-step" id="card2">
           <span>2</span>
           <div class="card__heading">
             <span>Step 2</span>
             <h4>Select plan</h4>
           </div>
         </div>
-        <div class="card1" id="card1">
+        <div class="card-step" id="card3">
           <span>3</span>
           <div class="card__heading">
             <span>Step 3</span>
             <h4>Add-ons</h4>
           </div>
         </div>
-        <div class="card1" id="card1">
+        <div class="card-step" id="card4">
           <span>4</span>
           <div class="card__heading">
             <span>Step 4</span>
@@ -66,7 +72,11 @@
         <!-- <section aria-busy="true"> -->
         <form action="post">
           <!-- Step 1 start -->
-          <section class="steps step1">
+          <section
+            class="step step1"
+            id="active-section"
+            data-element-selected="false"
+          >
             <div class="info">
               <h3>Personal info</h3>
               <p>Please provide your name, email address, and phone number.</p>
@@ -74,7 +84,12 @@
 
             <span>
               <label for="name">Name</label>
-              <input id="name" type="text" placeholder="e.g. Stephen King" />
+              <input
+                class="fw-700"
+                id="name"
+                type="text"
+                placeholder="e.g. Stephen King"
+              />
             </span>
 
             <span>
@@ -88,29 +103,33 @@
 
             <span>
               <label for="digits">Phone Number</label>
-              <input type="number" placeholder="e.g. +1 234 567 890" />
+              <input
+                type="tel"
+                pattern="[+][0-9]{3} [0-9]{10,14}"
+                placeholder="e.g. +1 234 567 890"
+              />
             </span>
 
-            <a href="#">Next step</a>
+            <a href="#" role="button" class="next">Next step</a>
           </section>
           <!-- Step 1 end -->
 
           <!-- Step 2 start -->
-          <section class="steps step2">
+          <section class="step step2">
             <div class="info">
               <h3>Select your plan</h3>
               <p>You have the option of monthly or yearly billing.</p>
             </div>
 
             <section class="plans__card">
-              <figure>
+              <figure tabindex="1">
                 <img src="./assets/images/icon-arcade.svg" alt="arcade icon" />
                 <figcaption>Arcade</figcaption>
                 <p>$9/mo</p>
                 <!-- dynamic  -->
               </figure>
 
-              <figure>
+              <figure tabindex="2">
                 <img
                   src="./assets/images/icon-advanced.svg"
                   alt="advance icon"
@@ -120,7 +139,7 @@
                 <!-- dynamic  -->
               </figure>
 
-              <figure>
+              <figure tabindex="3">
                 <img src="./assets/images/icon-pro.svg" alt="pro icon" />
                 <figcaption>Pro</figcaption>
                 <p>$15/mo</p>
@@ -132,54 +151,60 @@
               <p>Monthly</p>
               <span id="toggle">
                 <!--theme switch css for span above-->
-                <label className="switch">
-                  <input type="checkbox" className="theme__button" />
-                  <span className="slider round"></span>
+                <label class="switch">
+                  <input type="checkbox" class="theme__button" />
+                  <span class="slider round"></span>
                 </label>
               </span>
               <p>Yearly</p>
             </div>
 
             <div class="btn__navigate-page">
-              <a href="#">Go back</a>
-              <a href="#">Next step</a>
+              <a href="#" class="previous">Go back</a>
+              <a href="#" role="button" class="next">Next step</a>
             </div>
           </section>
           <!-- Step 2 end -->
 
           <!-- Step 3 start -->
-          <section class="steps step3">
+          <section class="step step3">
             <div class="info">
               <h3>Pick add-ons</h3>
               <p>Add-ons help enhance your gaming experience.</p>
             </div>
 
             <section class="add-ons__card">
-              <div>
-                <input type="checkbox" />
+              <div tabindex="4">
                 <span>
-                  <h4>Online Service</h4>
-                  <p>Access to multiplayer games</p>
+                  <input type="checkbox" />
+                  <span>
+                    <h4>Online Service</h4>
+                    <p>Access to multiplayer games</p>
+                  </span>
                 </span>
                 <p>+$1/mo</p>
                 <!--change dynamically the value above-->
               </div>
 
-              <div>
-                <input type="checkbox" />
+              <div tabindex="4">
                 <span>
-                  <h4>Larger Storage</h4>
-                  <p>Extra 1TB of cloud save</p>
+                  <input type="checkbox" />
+                  <span>
+                    <h4>Larger Storage</h4>
+                    <p>Extra 1TB of cloud save</p>
+                  </span>
                 </span>
                 <p>+$2/mo</p>
                 <!--change dynamically the value above-->
               </div>
 
-              <div>
-                <input type="checkbox" />
+              <div tabindex="4">
                 <span>
-                  <h4>Customizable Profile</h4>
-                  <p>Custom theme on your profile</p>
+                  <input type="checkbox" />
+                  <span>
+                    <h4>Customizable Profile</h4>
+                    <p>Custom theme on your profile</p>
+                  </span>
                 </span>
                 <p>+$2/mo</p>
                 <!--change dynamically the value above-->
@@ -187,14 +212,14 @@
             </section>
 
             <div class="btn__navigate-page">
-              <a href="#">Go back</a>
-              <a href="#">Next step</a>
+              <a href="#" class="previous">Go back</a>
+              <a href="#" role="button" class="next">Next step</a>
             </div>
           </section>
           <!-- Step 3 end -->
 
           <!-- Step 4 start -->
-          <section class="steps step1">
+          <section class="step step4">
             <div class="info">
               <h3>Finishing up</h3>
               <p>Double-check everything looks okay before confirming.</p>
@@ -205,19 +230,19 @@
                 <span>
                   <h4>Arcade (Monthly)</h4>
                   <a href="#">change</a>
-                  <p>$9/mo</p>
                 </span>
+                <p class="fw-700">$9/mo</p>
               </div>
               <hr />
-              <div>
-                <span>
+              <div id="main-plan__details">
+                <div>
                   <p>Online service</p>
                   <span>+$1/mo</span>
-                </span>
-                <span>
+                </div>
+                <div>
                   <p>larger storage</p>
                   <span>+$2/mo</span>
-                </span>
+                </div>
               </div>
             </section>
 
@@ -227,18 +252,18 @@
             </aside>
 
             <div class="btn__navigate-page">
-              <a href="#">Go back</a>
-              <a href="#">Confirm</a>
+              <a href="#" class="previous">Go back</a>
+              <a href="#" role="button">Confirm</a>
             </div>
           </section>
           <!-- Step 4 end -->
 
-          <button type="submit">Confirm</button>
+          <!-- <button type="submit">Confirm</button> -->
         </form>
 
         <!-- Step 5 start -->
         <div class="confirmation__page">
-          <figure>
+          <figure tabindex="2">
             <img
               src="./assets/images/icon-thank-you.svg"
               alt="thank you icon"
