bug: card two returning to monthly plan on plan select without toggling

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
       <section class="multi-step__container">
         <!-- <section aria-busy="true"> -->
-        <form action="post">
+        <form action="">
           <!-- Step 1 start -->
           <section
             class="step step1"
@@ -107,6 +107,7 @@
                 id="email"
                 type="email"
                 placeholder="e.g. stephenking@lorem.com"
+                required
               />
             </span>
 
