--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             <section class="add-ons__card">
               <div tabindex="4">
                 <span>
-                  <input type="checkbox" />
+                  <input type="checkbox" role="checkbox1" />
                   <span>
                     <h4>Online Service</h4>
                     <p>Access to multiplayer games</p>
@@ -201,7 +201,7 @@
 
               <div tabindex="4">
                 <span>
-                  <input type="checkbox" />
+                  <input type="checkbox" role="checkbox2" />
                   <span>
                     <h4>Larger Storage</h4>
                     <p>Extra 1TB of cloud save</p>
@@ -213,7 +213,7 @@
 
               <div tabindex="4">
                 <span>
-                  <input type="checkbox" />
+                  <input type="checkbox" role="checkbox3" />
                   <span>
                     <h4>Customizable Profile</h4>
                     <p>Custom theme on your profile</p>
@@ -244,16 +244,20 @@
                   <h4>Arcade (Monthly)</h4>
                   <a href="#">change</a>
                 </span>
-                <p class="fw-700">$9/mo</p>
+                <p class="fw-700" role="data-plan">$9/mo</p>
               </div>
               <hr />
               <div id="main-plan__details">
-                <div>
+                <div data-checkbox="checkbox1">
                   <p>Online service</p>
                   <span>+$1/mo</span>
                 </div>
-                <div>
+                <div data-checkbox="checkbox2">
                   <p>larger storage</p>
+                  <span>+$2/mo</span>
+                </div>
+                <div data-checkbox="checkbox3">
+                  <p>Customizable profit</p>
                   <span>+$2/mo</span>
                 </div>
               </div>
@@ -261,7 +265,7 @@
 
             <aside>
               <p>Total (per month)</p>
-              <h3>+$12/mo</h3>
+              <h3 role="total-amount">+$12/mo</h3>
             </aside>
 
             <div class="btn__navigate-page">
