feat: all functionality done, mobile responsiveness in progress

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 
             <div class="btn__navigate-page">
               <a href="#" class="previous">Go back</a>
-              <a href="#" role="button">Confirm</a>
+              <a href="#" role="button" data-submit="confirm">Confirm</a>
             </div>
           </section>
           <!-- Step 4 end -->
