style: mobile responsiveness done

--- a/index.html
+++ b/index.html
@@ -137,9 +137,11 @@
             <section class="plans__card">
               <figure tabindex="1">
                 <img src="./assets/images/icon-arcade.svg" alt="arcade icon" />
-                <figcaption>Arcade</figcaption>
-                <p>$9/mo</p>
-                <!-- dynamic  -->
+                <div>
+                  <figcaption>Arcade</figcaption>
+                  <p>$9/mo</p>
+                  <span class="yr-free">2 months free</span>
+                </div>
               </figure>
 
               <figure tabindex="2">
@@ -147,16 +149,20 @@
                   src="./assets/images/icon-advanced.svg"
                   alt="advance icon"
                 />
-                <figcaption>Advanced</figcaption>
-                <p>$12/mo</p>
-                <!-- dynamic  -->
+                <div>
+                  <figcaption>Advanced</figcaption>
+                  <p>$12/mo</p>
+                  <span class="yr-free">2 months free</span>
+                </div>
               </figure>
 
               <figure tabindex="3">
                 <img src="./assets/images/icon-pro.svg" alt="pro icon" />
-                <figcaption>Pro</figcaption>
-                <p>$15/mo</p>
-                <!-- dynamic  -->
+                <div>
+                  <figcaption>Pro</figcaption>
+                  <p>$15/mo</p>
+                  <span class="yr-free">2 months free</span>
+                </div>
               </figure>
             </section>
 
@@ -242,7 +248,7 @@
               <div>
                 <span>
                   <h4>Arcade (Monthly)</h4>
-                  <a href="#">change</a>
+                  <a href="#" id="change-plan">change</a>
                 </span>
                 <p class="fw-700" role="data-plan">$9/mo</p>
               </div>
